--- a/infrastructure/docker-compose/service.yml
+++ b/infrastructure/docker-compose/service.yml
@@ -11,7 +11,7 @@ services:
         ports:
             - "8186:8186"
         environment:
-            DATABASE_HOST: http://146.190.105.184
+            DATABASE_HOST: 146.190.105.184
             MARIADB_PORT_NUMBER: 3312
             LOGSTASH_HOST_PORT: 146.190.105.184:5000
             KAFKA_HOST: 146.190.105.184
@@ -33,9 +33,9 @@ services:
         ports:
             - "8182:8182"
         environment:
-            DATABASE_HOST: http://146.190.105.184
+            DATABASE_HOST: 146.190.105.184
             MARIADB_PORT_NUMBER: 3307
-            REDIS_HOST: http://146.190.105.184
+            REDIS_HOST: 146.190.105.184
             REDIS_PORT: 6379
             LOGSTASH_HOST_PORT: 146.190.105.184:5000
             ORGANIZATION_HOST: organization-service
@@ -59,7 +59,7 @@ services:
         ports:
             - "8185:8185"
         environment:
-            DATABASE_HOST: http://146.190.105.184
+            DATABASE_HOST: 146.190.105.184
             MARIADB_PORT_NUMBER: 3311
             LOGSTASH_HOST_PORT: 146.190.105.184:5000
             KAFKA_HOST: 146.190.105.184
@@ -81,7 +81,7 @@ services:
         ports:
             - "8184:8184"
         environment:
-            DATABASE_HOST: http://146.190.105.184
+            DATABASE_HOST: 146.190.105.184
             MARIADB_PORT_NUMBER: 3312
             LOGSTASH_HOST_PORT: 146.190.105.184:5000
 #        links:
