--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -4,7 +4,7 @@ COPY settings.xml settings.xml
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 COPY ./src ./src
-RUN ./mvnw -s settings.xml clean install -Dmaven.test.skip=true
+RUN ./mvnw -s settings.xml clean install
 
 FROM eclipse-temurin:8-jre-alpine
 WORKDIR /user-service
