--- a/user-service/src/main/resources/application-dev.yml
+++ b/user-service/src/main/resources/application-dev.yml
@@ -6,19 +6,21 @@ spring:
             max-file-size: 10MB
             max-request-size: 10MB
     datasource:
-        url: jdbc:mariadb://${DATABASE_HOST:146.190.105.184}:${MARIADB_PORT_NUMBER:3307}/auth_service?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+        url: jdbc:mariadb://${DATABASE_HOST:146.190.105.184}:${MARIADB_PORT_NUMBER:3307}/auth_service?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=GMT+7
         username: auth
         password: auth123
         driver-class-name: org.mariadb.jdbc.Driver
         hikari:
             maximum-pool-size: 10
+            connection-timeout: 30000
+
     jpa:
         show-sql: true
         hibernate:
             ddl-auto: update
         properties:
             hibernate:
-                dialect: org.hibernate.dialect.MariaDB103Dialect
+                dialect: org.hibernate.dialect.MariaDBDialect
 
     redis:
         database: 0
