fix: test ignore filter resource jks

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -162,6 +162,9 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <verbose>true</verbose>
+                    <excludes>
+                        <exclude>*.jks</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
