--- a/infrastructure/docker-compose/service.yml
+++ b/infrastructure/docker-compose/service.yml
@@ -3,7 +3,7 @@ services:
     organization-service:
         hostname: organization-service
         container_name: organization-service
-        image: vanket/microservice-pbl6:organization-service
+        image: organization-service:v1.0.0
         restart: always
         build:
             context: ../../organization-service/
@@ -25,7 +25,7 @@ services:
     user-service:
         hostname: user-service
         container_name: user-service
-        image: vanket/microservice-pbl6:user-service
+        image: user-service:v1.0.0
         restart: always
         build:
             context: ../../user-service/
@@ -51,7 +51,7 @@ services:
     member-service:
         hostname: member-service
         container_name: member-service
-        image: vanket/microservice-pbl6:member-service
+        image: member-service:v1.0.0
         restart: always
         build:
             context: ../../member-service/
@@ -73,7 +73,7 @@ services:
     issues-service:
         hostname: issues-service
         container_name: issues-service
-        image: vanket/microservice-pbl6:issues-service
+        image: issues-service:v1.0.0
         restart: always
         build:
             context: ../../issues-service/
