--- a/infrastructure/docker-compose/micro-service-dev-v1.0.0.yml
+++ b/infrastructure/docker-compose/micro-service-dev-v1.0.0.yml
@@ -10,7 +10,7 @@ services:
         environment:
             DATABASE_HOST: 146.190.105.184
             MARIADB_PORT_NUMBER: 3312
-            LOGSTASH_HOST_PORT: 146.190.105.184:5000
+            LOGSTASH_HOST_PORT: localhost:5000
             KAFKA_HOST: 146.190.105.184
         networks:
             - ${GLOBAL_NETWORK}
@@ -27,7 +27,7 @@ services:
             MARIADB_PORT_NUMBER: 3307
             REDIS_HOST: 146.190.105.184
             REDIS_PORT: 6379
-            LOGSTASH_HOST_PORT: 146.190.105.184:5000
+            LOGSTASH_HOST_PORT: localhost:5000
             ORGANIZATION_HOST: organization-service
             KAFKA_HOST: 146.190.105.184
         networks:
@@ -43,7 +43,7 @@ services:
         environment:
             DATABASE_HOST: 146.190.105.184
             MARIADB_PORT_NUMBER: 3311
-            LOGSTASH_HOST_PORT: 146.190.105.184:5000
+            LOGSTASH_HOST_PORT: localhost:5000
             KAFKA_HOST: 146.190.105.184
         networks:
             - ${GLOBAL_NETWORK}
@@ -58,7 +58,7 @@ services:
         environment:
             DATABASE_HOST: 146.190.105.184
             MARIADB_PORT_NUMBER: 3312
-            LOGSTASH_HOST_PORT: 146.190.105.184:5000
+            LOGSTASH_HOST_PORT: localhost:5000
         networks:
             - ${GLOBAL_NETWORK}
 
