--- a/infrastructure/docker-compose/database.yml
+++ b/infrastructure/docker-compose/database.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
     db_auth:
         container_name: db_auth
-        image: mariadb:latest
+        image: mariadb:10.8.2
         restart: always
         ports:
             - "3307:3306"
@@ -19,7 +19,7 @@ services:
 
     db_issues:
         container_name: db_issues
-        image: mariadb:latest
+        image: mariadb:10.8.2
         restart: always
         ports:
             - "3310:3306"
@@ -36,7 +36,7 @@ services:
 
     db_member:
         container_name: db_member
-        image: mariadb:latest
+        image: mariadb:10.8.2
         restart: always
         ports:
             - "3311:3306"
@@ -52,7 +52,7 @@ services:
 
     db_organization:
         container_name: db_organization
-        image: mariadb:latest
+        image: mariadb:10.8.2
         restart: always
         ports:
             - "3312:3306"
@@ -66,13 +66,13 @@ services:
         networks:
             - ${GLOBAL_NETWORK}
 
-    redis:
+    redis_micro:
         image: redis:latest
         hostname: redis
-        container_name: pds_redis
+        container_name: redis_auth
         restart: always
         volumes:
-            - ./volumes/redis/data:/data
+            - ./volumes/redis/micro:/data
         ports:
             - "6379:6379"
         networks:
