--- a/infrastructure/docker-compose/logstash/pipeline/logstash.conf
+++ b/infrastructure/docker-compose/logstash/pipeline/logstash.conf
@@ -7,19 +7,19 @@ input {
     tcp {
         port => "5000"
         type => syslog
-        codec => json_lines
+        codec => json
     }
 }
 
 filter {
-    if [type] == "syslog" {
-        mutate {
-            add_field => { "instance_name" => "%{app_name}-%{host}:%{app_port}" }
-        }
+    json {
+        source => "message"
+#         add_field => { "instance_name" => "%{app_name}-%{host}:%{app_port}" }
     }
 }
 
 output {
+    stdout { codec => "rubydebug" }
     elasticsearch {
         hosts => ["${ELASTICSEARCH_HOST}:${ELASTICSEARCH_PORT}"]
         index => "logs-%{+YYYY.MM.dd}"
