--- a/organization-service/src/main/resources/application-dev.yml
+++ b/organization-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url: jdbc:mariadb://${DATABASE_HOST:146.190.105.184}:${MARIADB_PORT_NUMBER:3312}/organization_service?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+        url: jdbc:mariadb://${DATABASE_HOST:139.59.96.208}:${MARIADB_PORT_NUMBER:3312}/organization_service?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
         username: auth
         password: auth123
         driver-class-name: org.mariadb.jdbc.Driver
@@ -29,7 +29,7 @@ organization-service:
     organization-request-topic-name: organization-request-value
 
 kafka-config:
-    bootstrap-servers: ${KAFKA_BROKER_1:localhost}:19092, ${KAFKA_BROKER_2:localhost}:29092, ${KAFKA_BROKER_3:localhost}:39092
+    bootstrap-servers: ${KAFKA_BROKER_1:139.59.96.208}:19092, ${KAFKA_BROKER_2:139.59.96.208}:29092, ${KAFKA_BROKER_3:139.59.96.208}:39092
     num-of-partitions: 3
     replication-factor: 3
 
