--- a/infrastructure/docker-compose/micro-service-dev-v1.0.0.yml
+++ b/infrastructure/docker-compose/micro-service-dev-v1.0.0.yml
@@ -10,6 +10,7 @@ services:
         environment:
             DATABASE_HOST: db_organization
             MARIADB_PORT_NUMBER: 3306
+            REDIS_HOST: redis_auth
 #            LOGSTASH_HOST_PORT: logstash:5000
 #            KAFKA_BROKER_1: kafka-broker-1
 #            KAFKA_BROKER_2: kafka-broker-2
@@ -66,6 +67,7 @@ services:
             MARIADB_PORT_NUMBER: 3306
             ORGANIZATION_HOST: organization-service
             MEMBER_HOST: member-service
+            REDIS_HOST: redis_auth
 #            LOGSTASH_HOST_PORT: logstash:5000
         networks:
             - ${GLOBAL_NETWORK}
