--- a/issues-service/src/main/resources/application-dev.yml
+++ b/issues-service/src/main/resources/application-dev.yml
@@ -13,6 +13,23 @@ spring:
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.MariaDB103Dialect
+    cache:
+        type: redis
+        redis:
+            cache-null-values: false
+            use-key-prefix: true
+    redis:
+        database: 1
+        host: ${REDIS_HOST:139.59.96.208}
+        port: 6379
+        timeout: 10000ms
+        lettuce:
+            pool:
+                max-active: 8
+                max-wait: -1ms
+                max-idle: 8
+                min-idle: 8
+
 management:
     health:
         circuitbreakers:
