--- a/organization-service/pom.xml
+++ b/organization-service/pom.xml
@@ -92,6 +92,11 @@
             <version>${logstash-logback-encoder.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
