--- a/infrastructure/docker-compose/micro-service-dev-v1.0.0.yml
+++ b/infrastructure/docker-compose/micro-service-dev-v1.0.0.yml
@@ -71,4 +71,43 @@ services:
 #            LOGSTASH_HOST_PORT: logstash:5000
         networks:
             - ${GLOBAL_NETWORK}
+    ## Prometheus
+    prometheus:
+        image: prom/prometheus:v2.37.1
+        container_name: prometheus
+        hostname: prometheus
+        restart: unless-stopped
+        ports:
+            - "9090:9090"
+        volumes:
+            - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+        depends_on:
+            - user-service
+            - organization-service
+            - member-service
+            - issues-service
+        networks:
+            - ${GLOBAL_NETWORK}
+
+    grafana:
+        image: grafana/grafana-oss:8.5.2
+        container_name: grafana
+        hostname: grafana
+        restart: unless-stopped
+        ports:
+            - "3000:3000"
+        links:
+            - prometheus:prometheus
+        volumes:
+            - ./grafana:/var/lib/grafana
+        environment:
+            - GF_SECURITY_ADMIN_USER=admin
+            - GF_SECURITY_ADMIN_PASSWORD=password
+        depends_on:
+            - user-service
+            - organization-service
+            - member-service
+            - issues-service
+        networks:
+            - ${GLOBAL_NETWORK}
 
