--- a/issues-service/src/main/resources/application-dev.yml
+++ b/issues-service/src/main/resources/application-dev.yml
@@ -29,6 +29,15 @@ spring:
                 max-wait: -1ms
                 max-idle: 8
                 min-idle: 8
+    zipkin:
+        base-url: http://146.190.105.184:9411
+        sender:
+            type: web
+        service:
+            name: issues-service
+    sleuth:
+        sampler:
+            probability: 1.0
 
 management:
     health:
@@ -37,7 +46,7 @@ management:
     endpoints:
         web:
             exposure:
-                include: "*"
+                include: prometheus
     endpoint:
         health:
             show-details: always
