--- a/organization-service/src/main/resources/application-dev.yml
+++ b/organization-service/src/main/resources/application-dev.yml
@@ -29,6 +29,15 @@ spring:
                 max-wait: -1ms
                 max-idle: 8
                 min-idle: 8
+    zipkin:
+        base-url: http://146.190.105.184:9411
+        sender:
+            type: web
+        service:
+            name: organization-service
+    sleuth:
+        sampler:
+            probability: 1.0
 
 keystore:
     password: team92pass
@@ -40,6 +49,15 @@ springdoc:
     swagger-ui:
         path: /swagger-ui-custom.html
         operationsSorter: method
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: prometheus
+    endpoint:
+        health:
+            show-details: always
 
 organization-service:
     organization-request-topic-name: organization-request-value
