--- a/issues-service/src/main/resources/application-dev.yml
+++ b/issues-service/src/main/resources/application-dev.yml
@@ -46,7 +46,7 @@ management:
     endpoints:
         web:
             exposure:
-                include: prometheus
+                include: "*"
     endpoint:
         health:
             show-details: always
