--- a/member-service/src/main/resources/application-dev.yml
+++ b/member-service/src/main/resources/application-dev.yml
@@ -40,7 +40,7 @@ management:
     endpoints:
         web:
             exposure:
-                include: prometheus
+                include: "*"
     endpoint:
         health:
             show-details: always
