--- a/organization-service/src/main/resources/application-dev.yml
+++ b/organization-service/src/main/resources/application-dev.yml
@@ -6,6 +6,9 @@ spring:
         driver-class-name: org.mariadb.jdbc.Driver
         hikari:
             maximum-pool-size: 10
+            max-lifetime: 1800000
+            idle-timeout: 600000
+            connection-timeout: 30000
     jpa:
         show-sql: true
         hibernate:
