feat: update status sprint complete && added attribute roles response signin

--- a/infrastructure/docker-compose/micro-service-dev-v1.0.0.yml
+++ b/infrastructure/docker-compose/micro-service-dev-v1.0.0.yml
@@ -11,6 +11,7 @@ services:
             DATABASE_HOST: db_organization
             MARIADB_PORT_NUMBER: 3306
             REDIS_HOST: redis_auth
+            ISSUES_HOST: issues-service
 #            LOGSTASH_HOST_PORT: logstash:5000
 #            KAFKA_BROKER_1: kafka-broker-1
 #            KAFKA_BROKER_2: kafka-broker-2
@@ -32,6 +33,7 @@ services:
             REDIS_PORT: 6379
 #            LOGSTASH_HOST_PORT: logstash:5000
             ORGANIZATION_HOST: organization-service
+            MEMBER_HOST: member-service
 #            KAFKA_BROKER_1: kafka-broker-1
 #            KAFKA_BROKER_2: kafka-broker-2
 #            KAFKA_BROKER_3: kafka-broker-3
