--- a/member-service/src/main/resources/application-dev.yml
+++ b/member-service/src/main/resources/application-dev.yml
@@ -13,15 +13,15 @@ spring:
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.MariaDB103Dialect
-    zipkin:
-        base-url: http://146.190.105.184:9411
-        sender:
-            type: web
-        service:
-            name: member-service
-    sleuth:
-        sampler:
-            probability: 1.0
+#    zipkin:
+#        base-url: http://146.190.105.184:9411
+#        sender:
+#            type: web
+#        service:
+#            name: member-service
+#    sleuth:
+#        sampler:
+#            probability: 1.0
 
 keystore:
     password: team92pass
