--- a/organization-service/src/main/resources/application-dev.yml
+++ b/organization-service/src/main/resources/application-dev.yml
@@ -32,18 +32,53 @@ spring:
                 max-wait: -1ms
                 max-idle: 8
                 min-idle: 8
-    zipkin:
-        base-url: http://146.190.105.184:9411
-        sender:
-            type: web
-        service:
-            name: organization-service
-    sleuth:
-        sampler:
-            probability: 1.0
+#    zipkin:
+#        base-url: http://146.190.105.184:9411
+#        sender:
+#            type: web
+#        service:
+#            name: organization-service
+#    sleuth:
+#        sampler:
+#            probability: 1.0
 
 keystore:
     password: team92pass
+
+feign:
+    circuitbreaker:
+        enabled: true
+
+#Resilience4j Properties
+resilience4j:
+    circuitbreaker:
+        instances:
+            organization:
+                register-health-indicator: true
+                event-consumer-buffer-size: 10
+                sliding-window-type: count_based
+                sliding-window-size: 5
+                failure-rate-threshold: 50
+                wait-duration-in-open-state: 5
+                permitted-number-of-calls-in-half-open-state: 3
+                automatic-transition-from-open-to-half-open-enabled: true
+    timelimiter:
+        instances:
+            organization:
+                timeout-duration:
+                    3s
+    retry:
+        instances:
+            issues:
+                max-attempts: 2
+                wait-duration: 3s
+
+app:
+    feign:
+        config:
+            issues-client:
+                name: issues-service
+                url: http://${ISSUES_HOST:localhost}:8184
 
 # Config Swagger  UI
 springdoc:
