--- a/organization-service/src/main/resources/application-dev.yml
+++ b/organization-service/src/main/resources/application-dev.yml
@@ -72,6 +72,9 @@ resilience4j:
             issues:
                 max-attempts: 2
                 wait-duration: 3s
+            member:
+                max-attempts: 2
+                wait-duration: 3s
 
 app:
     feign:
@@ -79,6 +82,9 @@ app:
             issues-client:
                 name: issues-service
                 url: http://${ISSUES_HOST:localhost}:8184
+            member-client:
+                name: member-service
+                url: http://${MEMBER_HOST:localhost}:8185
 
 # Config Swagger  UI
 springdoc:
@@ -97,40 +103,40 @@ management:
         health:
             show-details: always
 
-organization-service:
-    organization-request-topic-name: organization-request-value
-
-kafka-config:
-    bootstrap-servers: ${KAFKA_BROKER_1:139.59.96.208}:19092, ${KAFKA_BROKER_2:139.59.96.208}:29092, ${KAFKA_BROKER_3:139.59.96.208}:39092
-    num-of-partitions: 3
-    replication-factor: 3
-
-kafka-producer-config:
-    key-serializer-class: org.apache.kafka.common.serialization.StringSerializer
-    value-serializer-class: io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
-    compression-type: snappy
-    acks: all
-    batch-size: 16384
-    batch-size-boost-factor: 100
-    linger-ms: 5
-    request-timeout-ms: 60000
-    retry-count: 5
-
-kafka-consumer-config:
-    key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-    value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-    organization-consumer-group-id: organization-topic-consumer
-    auto-offset-reset: earliest
-    batch-listener: true
-    auto-startup: true
-    concurrency-level: 3
-    session-timeout-ms: 10000
-    heartbeat-interval-ms: 3000
-    max-poll-interval-ms: 300000
-    max-poll-records: 500
-    max-partition-fetch-bytes-default: 1048576
-    max-partition-fetch-bytes-boost-factor: 1
-    poll-timeout-ms: 150
+#organization-service:
+#    organization-request-topic-name: organization-request-value
+#
+#kafka-config:
+#    bootstrap-servers: ${KAFKA_BROKER_1:139.59.96.208}:19092, ${KAFKA_BROKER_2:139.59.96.208}:29092, ${KAFKA_BROKER_3:139.59.96.208}:39092
+#    num-of-partitions: 3
+#    replication-factor: 3
+#
+#kafka-producer-config:
+#    key-serializer-class: org.apache.kafka.common.serialization.StringSerializer
+#    value-serializer-class: io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+#    compression-type: snappy
+#    acks: all
+#    batch-size: 16384
+#    batch-size-boost-factor: 100
+#    linger-ms: 5
+#    request-timeout-ms: 60000
+#    retry-count: 5
+#
+#kafka-consumer-config:
+#    key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#    value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+#    organization-consumer-group-id: organization-topic-consumer
+#    auto-offset-reset: earliest
+#    batch-listener: true
+#    auto-startup: true
+#    concurrency-level: 3
+#    session-timeout-ms: 10000
+#    heartbeat-interval-ms: 3000
+#    max-poll-interval-ms: 300000
+#    max-poll-records: 500
+#    max-partition-fetch-bytes-default: 1048576
+#    max-partition-fetch-bytes-boost-factor: 1
+#    poll-timeout-ms: 150
 
 logstash:
     host: ${LOGSTASH_HOST_PORT:146.190.105.184:5000}
