fix: nullpointer exception when update issues

--- a/issues-service/src/main/resources/application-dev.yml
+++ b/issues-service/src/main/resources/application-dev.yml
@@ -84,6 +84,9 @@ resilience4j:
             organization:
                 max-attempts: 2
                 wait-duration: 3s
+            member:
+                max-attempts: 2
+                wait-duration: 3s
 
 app:
     feign:
