--- a/member-service/src/main/resources/application-dev.yml
+++ b/member-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url: jdbc:mariadb://${DATABASE_HOST:139.59.96.208}:${MARIADB_PORT_NUMBER:3311}/members_service?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+        url: jdbc:mariadb://${DATABASE_HOST::8185}:${MARIADB_PORT_NUMBER:3311}/members_service?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
         username: auth
         password: auth123
         driver-class-name: org.mariadb.jdbc.Driver
@@ -61,7 +61,7 @@ kafka-producer-config:
     batch-size: 16384
     batch-size-boost-factor: 100
     linger-ms: 5
-    request-timeout-ms: 500
+    request-timeout-ms: 1000
     retry-count: 2
 
 kafka-consumer-config:
