--- a/member-service/src/main/resources/application-dev.yml
+++ b/member-service/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url: jdbc:mariadb://${DATABASE_HOST::8185}:${MARIADB_PORT_NUMBER:3311}/members_service?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+        url: jdbc:mariadb://${DATABASE_HOST:165.232.173.235}:${MARIADB_PORT_NUMBER:3311}/members_service?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
         username: auth
         password: auth123
         driver-class-name: org.mariadb.jdbc.Driver
