--- a/organization-service/src/main/resources/application-dev.yml
+++ b/organization-service/src/main/resources/application-dev.yml
@@ -81,10 +81,10 @@ app:
         config:
             issues-client:
                 name: issues-service
-                url: http://${ISSUES_HOST:localhost:8184}
+                url: http://${ISSUES_HOST:localhost}:${ISSUES_PORT:8184}
             member-client:
                 name: member-service
-                url: http://${MEMBER_HOST:localhost:8185}
+                url: http://${MEMBER_HOST:localhost}:${MEMBER_PORT:8185}
 
 # Config Swagger  UI
 springdoc:
